# ai-council

./: .gitignore  README.md  check_json.py  create_test_image.py  generate_handwriting_base64.py  get_base64.py  pyproject.toml  start.sh  verify_ocr_full.py  verify_tesseract.py
backend/: config.py  council.py  files.py  main.py  openrouter.py  settings.py  storage.py
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.jsx  Stage3.css  Stage3.jsx
